// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
</div>
`;

exports[`Testing edit button in MobileClient should render MobileAddOrEdit component when clicked 1`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
  <div
    className="textInput"
  >
    <h1>
      Редактирование товара
    </h1>
    <form
      className="addItem"
    >
      <label>
        Фамилия
        <input
          className="fam"
          defaultValue="Иванов"
          name="fam"
          type="text"
        />
      </label>
      <br />
      <label>
        Имя
        <input
          defaultValue="Иван"
          name="im"
          type="text"
        />
      </label>
      <br />
      <label>
        Отчество
        <input
          defaultValue="Иванович"
          name="otch"
          type="text"
        />
      </label>
      <br />
      <label>
        Баланс
        <input
          defaultValue={200}
          name="balance"
          type="text"
        />
      </label>
    </form>
    <input
      className="button"
      onClick={[Function]}
      type="button"
      value="Изменить"
    />
  </div>
</div>
`;

exports[`Testing edit button in MobileClient should render MobileAddOrEdit component when clicked 2`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
  <div
    className="textInput"
  >
    <h1>
      Редактирование товара
    </h1>
    <form
      className="addItem"
    >
      <label>
        Фамилия
        <input
          className="fam"
          defaultValue="Сидоров"
          name="fam"
          type="text"
        />
      </label>
      <br />
      <label>
        Имя
        <input
          defaultValue="Сидор"
          name="im"
          type="text"
        />
      </label>
      <br />
      <label>
        Отчество
        <input
          defaultValue="Сидорович"
          name="otch"
          type="text"
        />
      </label>
      <br />
      <label>
        Баланс
        <input
          defaultValue={250}
          name="balance"
          type="text"
        />
      </label>
    </form>
    <input
      className="button"
      onClick={[Function]}
      type="button"
      value="Изменить"
    />
  </div>
</div>
`;

exports[`Testing edit button in MobileClient should render MobileAddOrEdit component when clicked 3`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
  <div
    className="textInput"
  >
    <h1>
      Редактирование товара
    </h1>
    <form
      className="addItem"
    >
      <label>
        Фамилия
        <input
          className="fam"
          defaultValue="Петров"
          name="fam"
          type="text"
        />
      </label>
      <br />
      <label>
        Имя
        <input
          defaultValue="Петр"
          name="im"
          type="text"
        />
      </label>
      <br />
      <label>
        Отчество
        <input
          defaultValue="Петрович"
          name="otch"
          type="text"
        />
      </label>
      <br />
      <label>
        Баланс
        <input
          defaultValue={180}
          name="balance"
          type="text"
        />
      </label>
    </form>
    <input
      className="button"
      onClick={[Function]}
      type="button"
      value="Изменить"
    />
  </div>
</div>
`;

exports[`Testing edit button in MobileClient should render MobileAddOrEdit component when clicked 4`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button editButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
  <div
    className="textInput"
  >
    <h1>
      Редактирование товара
    </h1>
    <form
      className="addItem"
    >
      <label>
        Фамилия
        <input
          className="fam"
          defaultValue="Григорьев"
          name="fam"
          type="text"
        />
      </label>
      <br />
      <label>
        Имя
        <input
          defaultValue="Григорий"
          name="im"
          type="text"
        />
      </label>
      <br />
      <label>
        Отчество
        <input
          defaultValue="Григорьевич"
          name="otch"
          type="text"
        />
      </label>
      <br />
      <label>
        Баланс
        <input
          defaultValue={-220}
          name="balance"
          type="text"
        />
      </label>
    </form>
    <input
      className="button"
      onClick={[Function]}
      type="button"
      value="Изменить"
    />
  </div>
</div>
`;
